Fix vertical alignment of email form

--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -103,8 +103,8 @@
     margin-bottom: 20px;
   }
 
-  .homepage-email-form {
-    display: flex !important;
+  .homepage-email-form-group {
+    display: flex;
     justify-content: center;
     align-items: center;
 
